--- a/assets/scss/components/_company.scss
+++ b/assets/scss/components/_company.scss
@@ -1,4 +1,6 @@
 .company {
+  $this: &;
+
   background-color: $color--contrast;
   padding: 1.2rem 3.75rem;
   margin-bottom: 1.2rem;
@@ -20,6 +22,10 @@
     text-decoration: underline;
     font-weight: 300;
     cursor: pointer;
+
+    #{$this}--active & {
+      color: $color--mid;
+    }
     // height: 1rem;
   }
   &__description {
