📃  - Open-source boilerplate

--- a/assets/scss/components/_list.scss
+++ b/assets/scss/components/_list.scss
@@ -30,6 +30,11 @@
     font-weight: 300;
     text-align: right;
     color: $color--light;
+    display: none;
+
+    @media screen and (min-width: 68rem) {
+      display: block;
+    }
   }
 }
 
