--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,32 +8,52 @@ $color--light: #e5e5e5;
 $color--mid: #909090;
 $color--neutral: #2b2b2b;
 
+$breakpoints: (
+  sm: 34rem
+);
+
+@mixin screen($breakpoint) {
+  $pt: $breakpoint;
+  @if map-has-key($breakpoints, $breakpoint) {
+    $pt: map-get($breakpoints, $breakpoint);
+  }
+  @media screen and (min-width: $pt) {
+    @content;
+  }
+}
+
 @mixin container-wide {
-  width: 1380px;
-  max-width: 100%;
-  padding: 0 1rem;
+  width: 100%;
+  max-width: 1380px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 2rem;
+  @include screen(sm) {
+    padding: 0 1rem;
+  }
 }
 
 @mixin container-narrow {
-  width: 960px;
+  width: 100%;
   margin: 0 auto;
-  max-width: 100%;
+  max-width: 960px;
 }
 
 html {
   background-color: $color--background;
   color: $color--neutral;
   font-family: 'Inter var', sans-serif;
-  font-size: 20px;
+  font-size: 16px;
+  @include screen(sm) {
+    font-size: 20px;
+  }
 }
 
 body {
   @include container-wide;
 }
 p {
-  line-height: 1.3;
+  line-height: 1.5;
 }
 
 a {
@@ -49,19 +69,34 @@ ol {
   margin-bottom: 1rem;
 }
 li {
+  line-height: 1.5;
+  margin-block-end: 0.5rem;
   &:before {
-    content: '-';
+    content: '—';
     display: inline-block;
+    padding-right: 0.2rem;
   }
   p {
     display: inline-block;
   }
 }
+strong {
+  font-weight: 670;
+}
+em {
+  font-style: italic;
+  color: $color--mid;
+}
 
 .main-title {
-  font-size: 6rem;
-  font-weight: 300;
-  margin-bottom: 5.5rem;
+  font-size: 2rem;
+  font-weight: 670;
+  margin-bottom: 2rem;
+  @include screen(sm) {
+    margin-bottom: 5.5rem;
+    font-size: 6.4vw;
+    font-weight: 300;
+  }
   span {
     color: $color--mid;
   }
