☸️ - Add rotating text animation

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -107,3 +107,4 @@ em {
 @import './components/card';
 @import './components/list';
 @import './components/company';
+@import './components/rotator';
