💘  - Remove Netlify CMS, add favicon, some webhint/lighthouse adjustments

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,7 +5,7 @@
 $color--contrast: #ffffff;
 $color--background: #f5f5f5;
 $color--light: #e5e5e5;
-$color--mid: #909090;
+$color--mid: #8e8e8e;
 $color--neutral: #2b2b2b;
 
 $breakpoints: (
