✍  - More a11y adjustments in color, etc.

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   @include container-narrow;
   text-align: right;
-  color: $color--mid;
+  color: $color--mid--footer;
   margin-bottom: 2.5rem;
   p {
     font-size: 0.8rem;
