--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,11 +2,13 @@
 
 @import url('https://rsms.me/inter/inter.css');
 
-$color--contrast: #ffffff;
-$color--background: #f5f5f5;
-$color--light: #e5e5e5;
-$color--mid: #8e8e8e;
-$color--neutral: #2b2b2b;
+$color--contrast: hsl(0, 0%, 100%);
+$color--background: hsl(0, 0%, 96%);
+$color--light: hsl(0, 0%, 90%);
+$color--mid: hsl(0, 0%, 56%);
+$color--mid--high-contrast: hsl(0, 0%, 46%);
+$color--mid--footer: hsl(0, 0%, 44%);
+$color--neutral: hsl(0, 0%, 17%);
 
 $breakpoints: (
   sm: 34rem,
@@ -86,7 +88,7 @@ strong {
 }
 em {
   font-style: italic;
-  color: $color--mid;
+  color: $color--mid--high-contrast;
 }
 
 .main-title {
