☸️ - Fix rotator on Chrome

--- a/assets/scss/components/_rotator.scss
+++ b/assets/scss/components/_rotator.scss
@@ -11,6 +11,7 @@
   font-weight: 200;
   font-size: 1rem;
   text-transform: uppercase;
+  letter-spacing: 1.95rem;
 
   display: none;
   @include screen(lg) {
