--- a/assets/scss/components/_company.scss
+++ b/assets/scss/components/_company.scss
@@ -7,6 +7,7 @@
   transform: translateX(-50%);
   padding: 1.2rem 2rem;
   margin-bottom: 1.2rem;
+  scroll-margin-top: 1.2rem;
 
   @include screen(sm) {
     width: 100%;
@@ -52,4 +53,8 @@
     text-align: right;
     display: block;
   }
+}
+
+:target {
+  outline: 1px solid $color--neutral;
 }
